--- a/JustAddCoffee.css
+++ b/JustAddCoffee.css
@@ -4,7 +4,6 @@ html{
 
 body{
     background-color: bisque;
-    border: solid;
 }
 
 ul {
@@ -12,11 +11,13 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
+position: fixed;
+right: 0;
   }
   
   li {
-    float: right; 
-       margin-left: 0.5em;
+    float: right;
+       margin-right: 0.7em;
        font-size: 1.3rem;
   }
   
@@ -27,19 +28,29 @@ ul {
     text-decoration: none;
   }
 
+  a:visited{
+    color: black;
+  }
+
   .hero{
     display: flex;
-    border: solid;
-    
   }
 
   .hero-text{
     max-width:60%;
     text-align: center;
-    justify-content: center;
+   margin-top:2.5rem;
   }
 
-img{
-
-border: solid;
+.hero-text button{
+    background-color: rgba(163, 40, 40, 0.753);
+    border: none;
+    padding:0.3rem;
+    border-radius: 0.5em;
+    font-size: 1em;
+    box-shadow:  2px 3px rgb(61, 14, 14);
 }
+
+  .hero img{
+    width: 50%;
+  }
