--- a/JustAddCoffee.css
+++ b/JustAddCoffee.css
@@ -4,6 +4,14 @@
   scroll-behavior: smooth;
 }
 
+:root{
+  --coffee-with-cream:rgb(194, 68, 0);
+  --dark-coffee:rgb(78, 20, 0);
+  --espresso:rgb(37, 2, 0);
+  --latte:rgb(253, 105, 71);
+  --scone:rgb(255, 176, 73);
+}
+
 html{
   background-color: var(--scone);
   box-sizing: border-box;
@@ -12,14 +20,6 @@ html{
 
 body{
   padding-top:60px;
-}
-
-:root{
-  --coffee-with-cream:rgb(194, 68, 0);
-  --dark-coffee:rgb(78, 20, 0);
-  --espresso:rgb(37, 2, 0);
-  --latte:rgb(253, 105, 71);
-  --scone:rgb(255, 176, 73);
 }
 
 ul{
@@ -103,8 +103,7 @@ flex-direction: column-reverse;
 
 .menu-grid{
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-justify-content: center;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
 gap:20px;
 border: solid;
 }
@@ -118,6 +117,9 @@ border: solid;
 .menu-item{
   text-align: center;
   justify-items: center;
+  display: grid;
+  grid-template-rows: subgrid;
+  grid-row: span 3;
 }
 
 .menu-item img{
@@ -125,30 +127,11 @@ border: solid;
 }
 
 /*contact*/
-
 .contact{
   display:flex;
   min-height:100vh;
-
 }
 
-.socials{
-  width: 50%;
-  flex-direction: column;
-}
-
-.message{
-  width:50%;
-  flex-direction: column;
-}
-
-input[type=text], input[type=email], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  resize: vertical;
-}
 
 label {
   padding: 12px 12px 12px 0;
